--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
