--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
-{
+{"homepage": "https://amitbiswas54.github.io/ReactReduxToolKit/",
   "name": "reactreduxtoolkit",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
-  },
+
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
+},
+
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.1",
     "@tailwindcss/vite": "^4.1.17",
